src/objects/cb5__CBSubAccount__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBParentSubAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Parent Sub Account</label>
        <referenceTo>cb5__CBSubAccount__c</referenceTo>
        <relationshipName>CBSubAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>SA-{000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <label>CB Account Subtype</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBSubAccount__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Sub Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>